ajout des images et qqs pages html/css/js

--- a/src/main/resources/templates/connexion.html
+++ b/src/main/resources/templates/connexion.html
@@ -10,7 +10,7 @@
 
         <div class="header" id="myHeader">
             <img src="/Logo.png" alt="Legac.e">
-            <h1>Page de connexion : utilisateur</h1>
+            <h1>Page de connexion</h1>
         </div>
     </head>
     <body>
