--- a/src/main/resources/templates/espaceUtilisateur.html
+++ b/src/main/resources/templates/espaceUtilisateur.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="espaceUtilisateur.css" />
+    <link rel="stylesheet" type="text/css" th:href="@{/css/espaceUtilisateur.css}" href="../static/css/espaceUtilisateur.css" />
+
     <title>Espace utilisateur</title>
     <div class="navbar">
-        <img src="images/Logo.png" />
+        <img src="/Logo.png" />
 
         <a id="tuto" href="legace/utilisateur" class="tutorielsU" target="_blank"
         >Tutoriels</a
@@ -38,6 +39,5 @@
         proches auront accès dans l’onglet du même nom.
     </p>
 </div>
-<script src="script.js"></script>
 </body>
 </html>
