--- a/src/main/resources/templates/connexion.html
+++ b/src/main/resources/templates/connexion.html
@@ -14,18 +14,23 @@
         </div>
     </head>
     <body>
-        <div id="div-mail">
-            <input id="mail" type="text" placeholder="Adresse mail" />
-        </div>
-        <div id="div-mdp">
-            <input id="mdp" type="password" placeholder="Mot de Passe" />
-        </div>
-        <div id="oublie">
-            <a href="" id="mdp-oublie">Mot de passe oublié ?</a>
-        </div>
-        <div id="div-suivant">
-            <input type="button" id="suivant" value="Suivant" />
-        </div>
+        <form method="POST" th:object="${userForm}" th:action="@{/login}" class="form-signin">
+            <div class="form-group" th:classappend="${#strings.isEmpty(error) ? 'has-error' : ''}">
+                <div id="div-mail">
+                    <input id="mail" name="adresseMail" type="text" placeholder="Adresse mail" autofocus="true"/>
+                </div>
+                <div id="div-mdp">
+                    <input id="mdp" name="mdp" type="password" placeholder="Mot de Passe" />
+                </div>
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+                <div id="oublie">
+                    <a href="" id="mdp-oublie">Mot de passe oublié ?</a>
+                </div>
+                <div id="div-suivant">
+                    <button id="suivant" class="btn btn-lg btn-primary btn-block" type="submit">Suivant</button>
+                </div>
+            </div>
+        </form>
         <input type="button" id="Menu" value="Revenir au menu principal" />
     </body>
 </html>
