modifs faites pendant l'échange avec M.Bastide

--- a/src/main/resources/templates/connexion.html
+++ b/src/main/resources/templates/connexion.html
@@ -14,13 +14,13 @@
         </div>
     </head>
     <body>
-        <form method="POST" th:object="${userForm}" th:action="@{/connexion}" class="form-signin">
+        <form method="POST" th:object="${userForm}" th:action="@{/login}" class="form-signin">
             <div class="form-group" th:classappend="${#strings.isEmpty(error) ? 'has-error' : ''}">
                 <div id="div-mail">
-                    <input id="mail" name="adresseMail" type="text" placeholder="Adresse mail" autofocus="true"/>
+                    <input id="mail" name="username" type="text" placeholder="Adresse mail" autofocus="true"/>
                 </div>
                 <div id="div-mdp">
-                    <input id="mdp" name="mdp" type="password" placeholder="Mot de Passe" />
+                    <input id="mdp" name="password" type="password" placeholder="Mot de Passe" />
                 </div>
                 <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
                 <div id="oublie">
