--- a/src/main/resources/templates/connexion.html
+++ b/src/main/resources/templates/connexion.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Static Template</title>
+        <title>Connexion</title>
         <link rel="stylesheet" type="text/css" th:href="@{/css/connexion.css}" href="../static/css/connexion.css" />
 
 
@@ -14,7 +14,7 @@
         </div>
     </head>
     <body>
-        <form method="POST" th:object="${userForm}" th:action="@{/login}" class="form-signin">
+        <form method="POST" th:action="@{/espaceUtilisateur}" action="#" class="form-signin">
             <div class="form-group" th:classappend="${#strings.isEmpty(error) ? 'has-error' : ''}">
                 <div id="div-mail">
                     <input id="mail" name="username" type="text" placeholder="Adresse mail" autofocus="true"/>
@@ -23,9 +23,6 @@
                     <input id="mdp" name="password" type="password" placeholder="Mot de Passe" />
                 </div>
                 <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-                <div id="oublie">
-                    <a href="" id="mdp-oublie">Mot de passe oublié ?</a>
-                </div>
                 <div id="div-suivant">
                     <button id="suivant" class="btn btn-lg btn-primary btn-block" type="submit">Suivant</button>
                 </div>
