--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!--comment ça se fait qu'on puisse voir le body alors qu'il faut être authentifié ici ???-->
 <div sec:authorize="isAuthenticated()">
 
 <div class="container">
