--- a/src/main/resources/static/css/inscription.css
+++ b/src/main/resources/static/css/inscription.css
@@ -19,37 +19,18 @@ and open the template in the editor.
   left: 0;
   width: 100%;
   z-index: 999;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   background-color: black;
 }
 
-.navbar a {
-  margin-right: 70px;
-  float: right;
-  color: white;
-  text-align: center;
-  padding: 12px 16px;
-  text-decoration: none;
-  font-size: 30px;
-  font-family: "Nunito";
-}
-
-.navbar a:hover {
-  background-color: white;
-  height: 100%;
-  color: black;
-}
-
-.navbar a.active {
-  color: black;
-  font-family: "Nunito Sans";
-}
-
 .navbar img {
-  height: 100%;
-  width: auto;
+  height: auto;
+  width: 178px;
   border: none;
   position: absolute;
-  float: left;
+  left: 43%;
 }
 
 body {
@@ -351,6 +332,11 @@ input[type="checkbox"] {
   height: 30px;
   margin-bottom: 0px;
   width: 700px;
+}
+
+#stwitter {
+  width: 695px;
+  height: 28px;
 }
 
 #p2 {
