--- a/src/main/resources/templates/inscription.html
+++ b/src/main/resources/templates/inscription.html
@@ -4,26 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link href="style.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" th:href="@{/css/inscription.css}" href="../static/css/inscription.css" />
-    <link rel="icon" type="image/png" href="/Logo.png" />
+    <link rel="icon" type="image/png" href="Logo.png" />
     <title>Création d'un compte</title>
     <div class="navbar">
-      <img src="/logoNavbar.png">
-      <a href="legace/legal" class="navbar-item" id="legal" target="_blank">Mentions légales & <br/> Conditions d'utilisation</a>
-      <a href="legace/famille" class="navbar-item" target="_blank">Se connecter : <br/> famille</a>
-      <a href="legace/utilisateur" class="navbar-item" target="_blank">Se connecter : <br/> utilisateur</a>
-      <a href="legace/compte" class="navbar-item" target="_blank">Créer un <br/> compte</a>
+        <a href="#" th:href="@{/welcome}"><img src="/logoNavbar.png"></a>
     </div>
     </head>
   <body>
     <h1 id="Souspage1">Merci de renseigner les champs suivants : (* obligatoire)</h1>
-    <form  method="POST" th:object="${userForm}" th:action="@{/registration}">
+    <form th:action="@{/registration}" th:object="${userForm}" method="POST">
       <div id="inscription">
       <p>
-          <input type="text" name="nom" id="nom" placeholder="NOM COMPLET*" required />
+        <input type="text" name="nom" id="nom" placeholder="NOM COMPLET*" required />
         <input type="date" name="dateNaiss" id="dateNaiss" required/>
-        <select id="sexe" name="sexe">
+        <select id="sexe" th:field="*{sexe}" name="sexe">
           <option value="" disabled selected hidden>SEXE*</option>
           <option value="homme">Homme</option>
           <option value="femme">Femme</option>
@@ -34,18 +29,20 @@
           type="text"
           name="prenom1"
           id="prenom1"
-          placeholder="PRÉNOM 1*"
+          th:field="*{prenom}"
+          placeholder="PRÉNOM*"
           required
         />
-        <input type="text" name="prenom2" id="prenom2" placeholder="PRÉNOM 2" />
-        <input type="text" name="prenom3" id="prenom3" placeholder="PRÉNOM 3" />
+        <input type="text" name="prenom2" id="prenom2" th:field="*{prenom2}" placeholder="PRÉNOM 2" />
+        <input type="text" name="prenom3" id="prenom3" th:field="*{prenom3}" placeholder="PRÉNOM 3" />
       </p>
       <p>
         <input
           type="text"
-          name="lieuNaiss"
+          name="codePostal"
           id="lieuNaiss"
-          placeholder="CODE POSTAL*"
+          th:field="*{codePostal}"
+          placeholder="CODE POSTAL DE NAISSANCE*"
         />
         <input
           type="button"
@@ -53,7 +50,7 @@
           id="recherche"
           value="Rechercher"
         />
-        <select id="commune"><option value="" disabled selected hidden>COMMUNE DE NAISSANCE*</option>
+        <select id="commune"><option value="" name="lieuNaiss" disabled selected hidden>COMMUNE DE NAISSANCE*</option>
         </select>
       </p>
       <p>
@@ -61,6 +58,7 @@
             type="text"
             name="nomf"
             id="nomf"
+            th:field="*{proche}"
             placeholder="PERSONNE À CONTACTER*"
             required
           />
@@ -68,6 +66,7 @@
           type="text"
           name="nomf2"
           id="nomf2"
+          th:field="*{proche2}"
           placeholder="PERSONNE À CONTACTER N°2"
         />
         </p>
@@ -76,6 +75,7 @@
               type="email"
               name="mailf"
               id="mailf"
+              th:field="*{emailProche}"
               placeholder="ADRESSE E-MAIL DE LA FAMILLE*"
               required
             />
@@ -83,17 +83,17 @@
             type="email"
             name="mailf2"
             id="mailf2"
+            th:field="*{emailProche2}"
             placeholder="ADRESSE E-MAIL DE LA FAMILLE N°2"
           />
           </p>
           <p>
           <label id="label-file" for="cni">JOINDRE UNE COPIE DE VOTRE CARTE D'IDENTITÉ RECTO-VERSO*
             </label>
-          <input type="file" id="cni" name="cni">
+          <input type="file" id="cni" name="cni" accept="image/*,.pdf">
     </p>
     </div>
     <img id="p1" src="/progression1.jpeg">
-    
   <h1 id="Souspage2">Merci de sélectionner les applications que vous utilisez : </h1>
   <div id="reseaux">
   <div class="res">
@@ -132,9 +132,7 @@
       <label id="twitter"> J'utilise cette application</label>
       <input type="checkbox" id="ctwitter" onclick="showtext()">
       <br>
-      <select id="stwitter" style="display:none">
-        <option value="" disabled selected hidden>Sélectionnez votre option</option>
-      </select>
+      <input type="text" name="pseudoTwitter" placeholder="Nom d'utilisateur (sans le @)" id="stwitter" style="display:none">
     </div>
     <div class="res">
       <img  src="/insta.jpeg"></img>
@@ -166,9 +164,20 @@
       Merci de renseigner une adresse e-Mail valide, votre numéro de téléphone et un mot de passe. Ce dernier sera à conserver précieusement. En cas de changement d'adresse e-mail, merci de le modifier dans votre espace utilisateur.
     </p>
       <p>
+        <div class='form-group' th:classappend="${#fields.hasErrors('username') ? 'has-error' : ''}">
+        <input
+          type="texte"
+          name="username"
+          id="username"
+          th:field="*{username}"
+          placeholder="Nom utilisateur*"
+          required
+          />
+        <ul><li th:errors="*{username}">Erreur sur le nom</li></ul>
+        </div>
         <input
           type="email"
-          name="email"
+          name="username"
           id="email"
           th:field="*{email}"
           placeholder="Adresse E-Mail valide*"
@@ -176,19 +185,36 @@
         />
       <input
             type="tel"
-            name="tel"
+            name="telephone"
             id="tel"
+            th:field="*{telephone}"
             placeholder="Téléphone*"
             required
           />
+        <div class='form-group' th:classappend="${#fields.hasErrors('passwordConfirm') ? 'has-error' : ''}">
+
         <input
             type="password"
-            name="mdp"
+            name="password"
             id="mdp"
             th:field="*{password}"
             placeholder="Mot de passe*"
             required
         />
+        <ul><li th:errors="*{username}">Erreur sur le nom</li></ul>
+
+        </div>
+        <div class='form-group' th:classappend="${#fields.hasErrors('passwordConfirm') ? 'has-error' : ''}">
+        <input
+            type="password"
+            name="passwordConfirm"
+            id="mdp2"
+            th:field="*{passwordConfirm}"
+            placeholder="Confirmation mot de passe*"
+            required
+        />
+        <ul><li th:errors="*{username}">Erreur sur le nom</li></ul>
+        </div>
         </p>
       <div id="testamentecrit">
           <label>Voulez-vous recevoir un modèle de testament écrit par mail ?</label>
@@ -200,11 +226,6 @@
       <p id="phrase2">
       Pour valider légalement votre inscription à ce site, vous devez inscrire sur votre testament, de manière claire, que notre entreprise <i>Legac.e</i> est le tiers de confiance qui se chargera de la gestion de vos données numériques après votre décès.
       </p>
-      <div class='form-group' th:classappend="${#fields.hasErrors('passwordConfirm') ? 'has-error' : ''}">
-            <input type="password"  th:field="*{passwordConfirm}"  class="form-control"
-                   placeholder="Confirm your password" />
-            <ul><li th:errors="*{passwordConfirm}">Erreur confirmation password</li></ul>
-        </div>
       <input type="submit" id="valider" value="Valider">
     </div>
     <img id="p3" src="/progression3.jpeg">
@@ -213,5 +234,11 @@
     <a id="renvoi2" href="#reseauxconcernes"></a>
     <a id="renvoi3" href="#verification"></a>
     <script th:src="@{/js/inscription.js}" src="../static/js/inscription.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script th:src="@{/js/bootstrap.min.js}" src="../static/js/bootstrap.min.js"></script>
     </body>
 </html>
+
+
+
+
