--- a/src/main/resources/static/css/inscription.css
+++ b/src/main/resources/static/css/inscription.css
@@ -352,9 +352,18 @@ input[type="checkbox"] {
   top: 1500px;
 }
 
-#email {
+#username {
   border-color: black;
   top: 15px;
+  height: 40px;
+  width: 240px;
+  border-width: 2px;
+}
+
+#email {
+  border-color: black;
+  position: relative;
+  left: 20px;
   height: 40px;
   width: 280px;
   border-width: 2px;
@@ -363,7 +372,7 @@ input[type="checkbox"] {
 #tel {
   border-color: black;
   position: relative;
-  left: 20px;
+  left: 40px;
   height: 40px;
   width: 200px;
   border-width: 2px;
@@ -371,10 +380,18 @@ input[type="checkbox"] {
 
 #mdp {
   border-color: black;
-  position: relative;
-  left: 40px;
+  top: 15px;
   height: 40px;
-  width: 240px;
+  width: 280px;
+  border-width: 2px;
+}
+
+#mdp2 {
+  border-color: black;
+  position: relative;
+  left: 20px;
+  height: 40px;
+  width: 280px;
   border-width: 2px;
 }
 
@@ -382,12 +399,16 @@ input[type="checkbox"] {
 #phrase1,
 #phrase2 {
   text-indent: 30px;
-  top: 160px;
+  top: 180px;
   margin: auto;
   width: 792px;
   text-align: justify;
   font-size: 1.2em;
   font-family: "Nunito";
+}
+
+#phrase1 {
+  margin-top: 20px;
 }
 
 #phrase2 {
@@ -396,9 +417,8 @@ input[type="checkbox"] {
 
 #testamentecrit {
   position: relative;
-  top: 10px;
+  top: 0px;
   color: black;
-  margin-bottom: 30px;
   font-size: 1.4em;
   border: solid;
   border-width: 2px;
@@ -407,7 +427,8 @@ input[type="checkbox"] {
 
 #ctestamentecrit {
   margin: 1px;
-  float: right;
+  position: absolute;
+  margin-left: 753px;
 }
 
 #cgu {
@@ -419,7 +440,6 @@ input[type="checkbox"] {
   background-color: black;
   float: right;
   position: relative;
-  margin-top: 20px;
   margin-bottom: 30px;
   border: none;
   width: 160px;
@@ -433,10 +453,14 @@ input[type="checkbox"] {
   top: 875px;
   height: auto;
   width: 792px;
-  margin: auto;
+  margin-top: 100px;
 }
 
 #renvoi1 {
   position: absolute;
   top: 0px;
+}
+
+.form-group {
+    display: inline-block;
 }
