intégration du scanner au projet, todo : modifier la date pour enlever les "-".

--- a/src/main/resources/templates/espaceUtilisateur.html
+++ b/src/main/resources/templates/espaceUtilisateur.html
@@ -81,6 +81,7 @@
             </div>
         </div>
         
+        <a th:href="@{/connect/twitter}"><button>Se Connecter à Twitter</button></a>
         
         
         <!--<div sec:authorize="hasRole('ROLE_ADMIN')">
