--- a/src/main/resources/templates/pageUser.html
+++ b/src/main/resources/templates/pageUser.html
@@ -13,6 +13,7 @@
 <div class="container">
     <h2 class="form-heading">Page Utilisateur</h2>
     <div>Votre email est : <span sec:authentication="principal.email">ab.cd@xyz.com</span></div>
+    <a href="connect/status.html" th:href="@{/connect}">Vos connexions aux réseaux sociaux</a>
     <div>Cette page est
         <a href="pageAdmin.html" th:href="@{/admin/pageAdmin}">réservée aux administrateurs</a>
     </div>
