Envoi mail inscription terminé

--- a/src/main/resources/templates/inscription.html
+++ b/src/main/resources/templates/inscription.html
@@ -220,7 +220,7 @@
         </p>
       <div id="testamentecrit">
           <label>Voulez-vous recevoir un modèle de testament écrit par mail ?</label>
-          <input type="checkbox" id="ctestamentecrit">
+          <input type="checkbox" id="ctestamentecrit" th:field="*{testament}">
       </div>
       <p id="phrase1">
       En cliquant sur "Valider", vous confirmez votre inscription à nos services et les <a id="cgu" href="legace/legal"> Conditions d'Utilisation</a> de notre outil de testament numérique. Vous confirmez également l'excactitude des informations renseignées précédemment. Nous vous enverrons un mail de confirmation d'inscription avec votre identifiant.
